package gameObjects;

public enum Color {
    COLOR_ROJO, COLOR_MORADO, COLOR_VERDE, COLOR_NEGRO

}
