package gameObjects;

public class Manzana extends Fruta {



    public Manzana(int numeroFrutas, int puntajeManzana) {
        super(numeroFrutas, puntajeManzana);

    }


}
