package main;

public class Bloque {
    private final int numeroBloque;

    public Bloque(int numeroBloque) {
        this.numeroBloque = numeroBloque;
    }
}
