package main;

public class Mapa {
    private final Nivel nivel;

    public Mapa(Nivel nivel) {
        this.nivel = nivel;
    }

    public Nivel generarNivel() {

        return null;
    }
}
